removed containers from backeend nodee aas we usse the api from the node to acceess containers